# cp-mega88

./: .gitignore  Hardware.md  LICENSE  Makefile  Makefile.avr  Makefile.nacl32  Makefile.nacl64  Makefile.posix  Makefile.uboot  Makefile.uefi  ProjectHome.md  README.md  TODO  cpu_8080.c  cpu_8080.h  eeprom.c  eeprom.h  eeprom_avr.c  eeprom_base.c  eeprom_uefi.c  fat.c  fat.h  fat_test.c  i8080.S  i8080.h  main.c  sdcard.c  sdcard.h  sdcard_avr.c  sdcard_base.c  sram.c  sram.h  sram_asm.s  sram_avr.c  sram_base.c  sram_mac.s  sram_test.s  uart.c  uart.h  uart_asm.s  (+4 more)
eagle/: main.sch
espidf/: CMakeLists.txt  espidf.code-workspace  platformio.ini  sdkconfig.m5stack-core2
espidf/src/: CMakeLists.txt
ioext/: ioext_test.ino
makefiles/: Makefile.atmega32u2  Makefile.atmega88  Makefile.avr  Makefile.nacl32  Makefile.nacl64  Makefile.posix  Makefile.uboot  Makefile.uboot_ac100  Makefile.uboot_qemu_arm  Makefile.uboot_rpi  Makefile.uefi
native_client/: cpmega88.html  cpmega88.nmf  nacl_main.cc  nacl_main.h  wrap.cc  wrap.h
src/: LICENSE  con.h  con_avr_cdc.c  con_avr_uart.c  con_avr_uart_asm.S  con_base.c  con_espidf.cc  con_posix.c  con_uboot.c  con_uefi.c  config.h  cpu_8080.h  eeprom.h  eeprom_espidf.c  eeprom_image.c  eeprom_posix.c  eeprom_uboot.c  fat.c  fat.h  i8080.S  i8080.h  io.h  io_avr.c  io_base.c  led.h  led_avr.c  led_base.c  machine.c  machine.h  main_posix.c  main_uefi.c  platform.c  platform.h  platform_avr.c  platform_espidf.c  platform_nacl.cc  platform_nacl.h  platform_posix.c  platform_uboot.c  platform_uefi.c  (+17 more)
